--- a/TodoNS/Todo/Todo/Views/TodoItemPage.xaml
+++ b/TodoNS/Todo/Todo/Views/TodoItemPage.xaml
@@ -4,7 +4,7 @@
              x:Class="Todo.Views.TodoItemPage" Title="{Binding Name}">
 	<StackLayout Margin="20" VerticalOptions="StartAndExpand">
 		<Label Text="Name" />
-		<Entry Text="{Binding Name}" />
+		<Entry Text="{Binding Name}" MaxLength="10" />
 		<Label Text="Notes" />
 		<Entry Text="{Binding Notes}" />
 		<Label Text="Done" />
