--- a/TodoNS/Todo/Todo/Views/TodoItemPage.xaml
+++ b/TodoNS/Todo/Todo/Views/TodoItemPage.xaml
@@ -4,9 +4,9 @@
              x:Class="Todo.Views.TodoItemPage" Title="{Binding Name}">
 	<StackLayout Margin="20" VerticalOptions="StartAndExpand">
 		<Label Text="Name" />
-		<Entry Text="{Binding Name}" MaxLength="10" />
+		<Entry Text="{Binding Name}" MaxLength="10" IsSpellCheckEnabled="False" />
 		<Label Text="Notes" />
-		<Entry Text="{Binding Notes}" />
+		<Entry Text="{Binding Notes}" IsSpellCheckEnabled="True" />
 		<Label Text="Done" />
 		<Switch IsToggled="{Binding Done}" />
 		<Button Text="Save" Clicked="OnSaveClicked" />
